--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Clone</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="second-container">
+      <div class="wrap-center">
+        <div class="main-title">iPhone 11 Pro</div>
+        <div class="discription-text">
+          Pro cameras. Pro display. Pro performance.
+        </div>
+        <div class="price-text">From $24.95/mo. or$599 with trade in.</div>
+        <div class="link-list">
+          <ul>
+            <li>
+              <a href="#"
+                >Learn more <i class="fa-solid fa-chevron-right"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#">Buy <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="third-container">
+      <div class="wrap-center">
+        <div class="main-title">iPhone 11</div>
+        <div class="discription-text">Just the right amount of everything.</div>
+        <div class="price-text">From $16.62/mo. or $399 with trade-in.</div>
+        <div class="link-list">
+          <ul>
+            <li>
+              <a href="#"
+                >Learn more <i class="fa-solid fa-chevron-right"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#">Buy <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
