--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
 
 
     <div class="container">
+      
+    <header class="headerbg">
+        <div class="wrap-center">
+            <ul>
+                <li class="apple-logo"><a href="/"><img src="./images/icons/logo.png" alt="Apple Menu" class="reduce-icon" /></a></li>
+                <li><a href="/mac/">Mac</a></li>
+                <li><a href="/iPhone/">iPhone</a></li>
+                <li><a href="/iPad/">iPad</a></li>
+                <li><a href="/watch/">Watch</a></li>
+                <li><a href="/tv/">tv</a></li>
+                <li><a href="/music/">Music</a></li>
+                <li><a href="/support/">Support</a></li>
+                <li class="search-logo"><a href="/search/"><img src="./images/icons/search-icon.png" alt="Search "  class="reduce-icon"/></a></li>
+                <li class="cart-logo"><a href="/cart/"><img src="./images/icons/cart.png" alt="Cart"  class="reduce-icon"/></a></li>
+            </ul>
+           </div>
+    </header>
       <section class="second-container">
       <div class="wrap-center">
         <div class="main-title">iPhone 11 Pro</div>
