firs section branch

--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
             </ul>
            </div>
     </header>
+      <section class="first-container">
+        <div class="wrap-center">
+          <div class="model">16-inch model</div>
+          <div class="main-title">MacBook Pro</div>
+          <div class="discription-text1">The best for the brightest.</div>
+          <div class="link-list">
+            <ul>
+              <li>
+                <a href="#"
+                  >Learn more <i class="fa-solid fa-chevron-right"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#">Buy <i class="fa-solid fa-chevron-right"></i></a>
+              </li>
+            </ul>
+            <div class="macPro">
+              <img src="./images/home/mac-laptop.jpg" alt="mac-book" />
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="second-container">
       <div class="wrap-center">
         <div class="main-title">iPhone 11 Pro</div>
